--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,9 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        users: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Install NodeJS
-        users: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: 18
       - name: Install dependencies
